* Remove fuse.Enumerable mixins from fuse.Hash. [FuseJS LH #28] [jddalton]

* Update DOM traversal API. [Joe Gornick, jddalton]
  Note: Backwards compatibility warning.
  - Renamed firstDescendant -> first
  - Added/changed API functionality
    up/down/next/previous/first/last():
      Returns parentNode/firstElementChild/nextElementSibling/previousElementSibling/lastElementChild
    up/down/next/previous/first/last(selectors):
      Returns relevant element element matched by specified selector
    up/down/next/previous/first/last(callback, thisArg):
      Returns first relevant element that callback returns true for
    up/down/next/previous/first/last(n):
      Returns an nth length fuse.dom.NodeList of relevant elements

* Make fuse.dom.Selector namespace lowercase and update selector engine adapters to support an optional `callback` argument. [jddalton]

* Remove `new` operator from Function constructor calls and minify code strings used in compiled methods. [jddalton]

* Simplify extending fuse.dom.NodeList and fuse.dom.RawList and conform more to the jQuery syntax for list getters/setters. [jddalton]

* Force fuse.Object._each() to skip the `prototype` property on functions because browsers are not consistent one way or the other. [jddalton]

* Use the global.opera [[Class]] value for better Opera agent detection. [jddalton, Paul Irish]

* Ensure private function toInteger() works with extremely large negative values. [Asen Bozhilov, jddalton]

* Remove unused functionality from fuse.addNS(). [jddalton]

* Update the fuse.Class API. [jddalton, T.J. Crowder]
  - Created fuse.Class.statics and fuse.Class.mixins objects
  - Moved the callSuper() method onto the Class.mixins object
  - Added addMixins(), addPlugins(), addStatics() methods to fuse.Class.statics object
  - fuse.Class argument order is now ($super, plugins, mixins, statics) or (plugins, mixins, statics)
  - Class extend() argument order is now (plugins, mixins, statics)